add start up code

--- a/lecture_notebook.ipynb
+++ b/lecture_notebook.ipynb
@@ -8,6 +8,28 @@
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892a6078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load in the csv as a pandas dataframe\n",
+    "df = pd.read_csv(\"spotify-2023.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425df3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preview - top 10 rows of the dataframe\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
